replaced .get with .getFirst